--- a/src/pug/sections/_fotorama.pug
+++ b/src/pug/sections/_fotorama.pug
@@ -1,3 +1,5 @@
+//======== Если на странице будет контент, вводимый пользователем из редактора, и теги будут без классов, то для стилизации таких текстом самой первой секции надо добавить класс .content-page. Стилизовались теги, исходя из того, что они будут внутри класса .content-page ==============
+
 section.content-page.body-3
 	.company-presentation
 		.container
@@ -31,9 +33,11 @@ section.content-page.body-3
 
 			p В настоящее время на фоне импортозамещения увеличился спрос на российские продукты питания. Весной 2014 года Владимир Владимирович Путин сказал, что осетинские пироги наряду с другими блюдами национальной кухни могут успешно заменить продукцию Макдональдс. Но для этого нужно наладить их промышленное производство, домашнее по сути, но изготовленное в промышленных масштабах. Производство наладили на базе предприятий партнеров. Подписаны договоры о поставке заморозки с сетями Магнит, Айгуль и Метро. Открывается логистический центр со складом временного хранения в г.Москва. Поставки начали по СКФО, ЮФО, г.Москва, Якутск и Крым.
 
+			//===== текст с бордером слева  =====
 			.txt-accent.body-3
 				p На базе хлебозавода планируется увеличить выпуск хлебобулочных изделий до 648т. в год. Организовать производство сыра, объем производства 125т. в год, натурального живого кваса 900т. в год и создать логистическое направление с различными температурными режимами от – 18С до +20.
-
+			
+			//===== текст в рамке =====
 			.txt-warning
 				.txt-bold В ассортименте все виды классических осетинских пирогов:
 				.txt-semi пирог с сыром - «уæлибæх», пирог осетинский с картофелем и сыром – «картофджын», пирог осетинский с говядиной «фыдджын»,пирог осетинский с листьями свеклы и сыром–«цæхæраджын», пирог осетинский с капустой «къабускаджын»
