--- a/src/pug/ui/icons.pug
+++ b/src/pug/ui/icons.pug
@@ -160,3 +160,186 @@ html(lang="ru")
 							pre.
 								svg.svg-reload
 									use(href="./img/spriteSvg.svg#svg-reload")
+						li
+							svg.svg-medical
+								use(href="../img/spriteSvg.svg#svg-medical")
+							pre.
+								svg.svg-medical
+									use(href="./img/spriteSvg.svg#svg-medical")
+
+						li
+							svg.svg-benefit2
+								use(href="../img/spriteSvg.svg#svg-benefit2")
+							pre.
+								svg.svg-benefit2
+									use(href="./img/spriteSvg.svg#svg-benefit2")
+						li
+							svg.svg-benefit3
+								use(href="../img/spriteSvg.svg#svg-benefit3")
+							pre.
+								svg.svg-benefit3
+									use(href="./img/spriteSvg.svg#svg-benefit3")
+						li
+							svg.svg-benefit4
+								use(href="../img/spriteSvg.svg#svg-benefit4")
+							pre.
+								svg.svg-benefit4
+									use(href="./img/spriteSvg.svg#svg-benefit4")
+						li
+							svg.svg-benefit5
+								use(href="../img/spriteSvg.svg#svg-benefit5")
+							pre.
+								svg.svg-benefit5
+									use(href="./img/spriteSvg.svg#svg-benefit5")
+						li
+							svg.svg-benefit6
+								use(href="../img/spriteSvg.svg#svg-benefit6")
+							pre.
+								svg.svg-benefit6
+									use(href="./img/spriteSvg.svg#svg-benefit6")
+
+						li
+							svg.svg-icon_1
+								use(href="../img/spriteSvg.svg#svg-icon_1")
+							pre.
+								svg.svg-icon_1
+									use(href="./img/spriteSvg.svg#svg-icon_1")
+						li
+							svg.svg-icon_2
+								use(href="../img/spriteSvg.svg#svg-icon_2")
+							pre.
+								svg.svg-icon_2
+									use(href="./img/spriteSvg.svg#svg-icon_2")
+						li
+							svg.svg-icon_3
+								use(href="../img/spriteSvg.svg#svg-icon_3")
+							pre.
+								svg.svg-icon_3
+									use(href="./img/spriteSvg.svg#svg-icon_3")
+						li
+							svg.svg-icon_4
+								use(href="../img/spriteSvg.svg#svg-icon_4")
+							pre.
+								svg.svg-icon_4
+									use(href="./img/spriteSvg.svg#svg-icon_4")
+						li
+							svg.svg-icon_5
+								use(href="../img/spriteSvg.svg#svg-icon_5")
+							pre.
+								svg.svg-icon_5
+									use(href="./img/spriteSvg.svg#svg-icon_5")
+						li
+							svg.svg-icon_6
+								use(href="../img/spriteSvg.svg#svg-icon_6")
+							pre.
+								svg.svg-icon_6
+									use(href="./img/spriteSvg.svg#svg-icon_6")
+						li
+							svg.svg-icon_7
+								use(href="../img/spriteSvg.svg#svg-icon_7")
+							pre.
+								svg.svg-icon_7
+									use(href="./img/spriteSvg.svg#svg-icon_7")
+						li
+							svg.svg-icon_8
+								use(href="../img/spriteSvg.svg#svg-icon_8")
+							pre.
+								svg.svg-icon_8
+									use(href="./img/spriteSvg.svg#svg-icon_8")
+						li
+							svg.svg-icon_9
+								use(href="../img/spriteSvg.svg#svg-icon_9")
+							pre.
+								svg.svg-icon_9
+									use(href="./img/spriteSvg.svg#svg-icon_9")
+						li
+							svg.svg-icon_10
+								use(href="../img/spriteSvg.svg#svg-icon_10")
+							pre.
+								svg.svg-icon_10
+									use(href="./img/spriteSvg.svg#svg-icon_10")
+						li
+							svg.svg-icon_11
+								use(href="../img/spriteSvg.svg#svg-icon_11")
+							pre.
+								svg.svg-icon_11
+									use(href="./img/spriteSvg.svg#svg-icon_11")
+						//- li
+						//- 	svg.svg-icon_12
+						//- 		use(href="../img/spriteSvg.svg#svg-icon_12")
+						//- 	pre.
+						//- 		svg.svg-icon_12
+						//- 			use(href="./img/spriteSvg.svg#svg-icon_12")
+
+						//- li
+						//- 	svg.svg-icon_13
+						//- 		use(href="../img/spriteSvg.svg#svg-icon_13")
+						//- 	pre.
+						//- 		svg.svg-icon_13
+						//- 			use(href="./img/spriteSvg.svg#svg-icon_13")
+						//- li
+						//- 	svg.svg-icon_14
+						//- 		use(href="../img/spriteSvg.svg#svg-icon_14")
+						//- 	pre.
+						//- 		svg.svg-icon_14
+						//- 			use(href="./img/spriteSvg.svg#svg-icon_14")
+						//- li
+						//- 	svg.svg-icon_15
+						//- 		use(href="../img/spriteSvg.svg#svg-icon_15")
+						//- 	pre.
+						//- 		svg.svg-icon_15
+						//- 			use(href="./img/spriteSvg.svg#svg-icon_15")
+						//- li
+						//- 	svg.svg-icon_16
+						//- 		use(href="../img/spriteSvg.svg#svg-icon_16")
+						//- 	pre.
+						//- 		svg.svg-icon_16
+						//- 			use(href="./img/spriteSvg.svg#svg-icon_16")
+						//- li
+						//- 	svg.svg-icon_17
+						//- 		use(href="../img/spriteSvg.svg#svg-icon_17")
+						//- 	pre.
+						//- 		svg.svg-icon_17
+						//- 			use(href="./img/spriteSvg.svg#svg-icon_17")
+						//- li
+						//- 	svg.svg-icon_18
+						//- 		use(href="../img/spriteSvg.svg#svg-icon_18")
+						//- 	pre.
+						//- 		svg.svg-icon_18
+						//- 			use(href="./img/spriteSvg.svg#svg-icon_18")
+						//- li
+						//- 	svg.svg-icon_19
+						//- 		use(href="../img/spriteSvg.svg#svg-icon_19")
+						//- 	pre.
+						//- 		svg.svg-icon_19
+						//- 			use(href="./img/spriteSvg.svg#svg-icon_19")
+						//- li
+						//- 	svg.svg-icon_20
+						//- 		use(href="../img/spriteSvg.svg#svg-icon_20")
+						//- 	pre.
+						//- 		svg.svg-icon_20
+						//- 			use(href="./img/spriteSvg.svg#svg-icon_20")
+						//- li
+						//- 	svg.svg-icon_21
+						//- 		use(href="../img/spriteSvg.svg#svg-icon_21")
+						//- 	pre.
+						//- 		svg.svg-icon_21
+						//- 			use(href="./img/spriteSvg.svg#svg-icon_21")
+						//- li
+						//- 	svg.svg-icon_22
+						//- 		use(href="../img/spriteSvg.svg#svg-icon_22")
+						//- 	pre.
+						//- 		svg.svg-icon_22
+						//- 			use(href="./img/spriteSvg.svg#svg-icon_22")
+						//- li
+						//- 	svg.svg-icon_23
+						//- 		use(href="../img/spriteSvg.svg#svg-icon_23")
+						//- 	pre.
+						//- 		svg.svg-icon_23
+						//- 			use(href="./img/spriteSvg.svg#svg-icon_23")
+						//- li
+						//- 	svg.svg-icon_24
+						//- 		use(href="../img/spriteSvg.svg#svg-icon_24")
+						//- 	pre.
+						//- 		svg.svg-icon_24
+						//- 			use(href="./img/spriteSvg.svg#svg-icon_24")
