--- a/src/scss/sections/_supervisory.scss
+++ b/src/scss/sections/_supervisory.scss
@@ -61,7 +61,7 @@
 .special-project__text>*>*+*{
    margin-top: 30px;
 }
-.special-project__text .title-24 + *{
+article .title-24 + *{
 	margin-top: 20px;
 	@media (max-width: 767px) {
 			margin-top: 10px;
