--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -23,6 +23,9 @@ block content
 			
 			a(href="partnership.html")
 				span Партнерство
+			
+			a(href="calculate-page.html")
+				span Калькуллятор
 				
 block variables
 	-var title = "Page";
