--- a/src/pug/sections/_calculate.pug
+++ b/src/pug/sections/_calculate.pug
@@ -1,33 +1,33 @@
-.calculate-content
+.calculate-page
 	.sticky-menu
 		.container
 			ul#sticky-menu
 				li
-					a(href="#partnership-block").active Калькулятор мер поддержки
+					a(href="#calculator").active Калькулятор мер поддержки
 				li
-					a(href="#projects-showcase") Региональные меры
+					a(href="#") Региональные меры
 
 				li
-					a(href="#normative") Федеральные меры
+					a(href="#") Федеральные меры
 				li
-					a(href="#partnership-block") Совместная поддержка
+					a(href="#") Совместная поддержка
 				li
-					a(href="#projects-showcase") Льготное финансирование
+					a(href="#") Льготное финансирование
 
 				li
-					a(href="#normative") Для институтов развития
+					a(href="#") Для институтов развития
 				li
-					a(href="#normative") Нефинансовые меры
+					a(href="#") Нефинансовые меры
 				li
-					a(href="#normative") Законодательство
+					a(href="#") Законодательство
 
-	section.calculate
-		article.partnership-block.sticky-menu-section#partnership-block
+	section.calculate-page__content
+		article.calculator.sticky-menu-section#calculator
 			.container
 				.h2 Государственно-частное партнерство
 				
 				//====== отдельный раздел  =====
-				.partnership-block__wrapper
+				.calculator__wrapper
 					//====card=====
 					.brand-card
 						.project-card
