--- a/src/pug/sections/_partnership.pug
+++ b/src/pug/sections/_partnership.pug
@@ -18,14 +18,14 @@
 				//====== отдельный раздел  =====
 				.partnership-block__wrapper
 					//====card=====
-					.brand-card
+					.large-card
 						.project-card
 							.h1 01 #[span.body-bold место]
 								
 							.project-card__footer
 								p Рейтинг регионов по уровню развития ГЧП
 
-						.brand-card__text
+						.large-card__text
 							p.body-bold Нижегородская область обладает уникальным опытом в реализации проектов государственно-частного партнерства и занимает 1 место в рейтинге регионов по уровню развития ГЧП за 2022 год
 				
 					
