--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -177,7 +177,7 @@ article{
 	}
 }
 .economy-republic .container, .partnership-block__wrapper,
-.company-presentation .container, .partnership .container {
+.company-presentation .container, .partnership .container, .calculator .container {
 	&>*+* {
 		margin-top: 40px;
 	}
