--- a/src/pug/sections/_calculate.pug
+++ b/src/pug/sections/_calculate.pug
@@ -24,21 +24,55 @@
 	section.calculate-page__content
 		article.calculator.sticky-menu-section#calculator
 			.container
-				.h2 Государственно-частное партнерство
+				.h2 Калькулятор мер поддержки
 				
-				//====== отдельный раздел  =====
-				.calculator__wrapper
-					//====card=====
-					.brand-card
-						.project-card
-							.h1 01 #[span.body-bold место]
-								
-							.project-card__footer
-								p Рейтинг регионов по уровню развития ГЧП
+				p.body-reg Для удобства предлагаем ознакомиться с #[a(href="#!").link видеоинструкцией о работе онлайн-калькулятора мер поддержки инвестиционных проектов]
+				
+				//====== FORM ==========================
+				form.calculator-form
+					
+					//==== form-block  Тип организации =====
+					.calculator-form__group
+						.large-card
+							.project-card
+								.body-bold  Тип организации
+									
+								.project-card__footer
+									p Выберите тип организации
 
-						.brand-card__text
-							p.body-bold Нижегородская область обладает уникальным опытом в реализации проектов государственно-частного партнерства и занимает 1 место в рейтинге регионов по уровню развития ГЧП за 2022 год
-				
+							.large-card__text
+								.form-radio
+									label.fl-column
+										input(type="radio" name="name_1")
+										.form-item__pic
+											svg.svg-icon_1
+												use(href="./img/spriteSvg.svg#svg-icon_1")
+										.body-5 Микропредприятие
+								+calc-radio('radio', '1', 2,'Малое предприятие')
+								+calc-radio('radio', '1', 3,'Среднее предприятие')
+								+calc-radio('radio', '1', 4,'Крупное предприятие')
+					
+					//==== form-block Тип поддержки =====
+					.calculator-form__group
+						.large-card
+							.project-card
+								.body-bold  Тип поддержки
+									
+								.project-card__footer
+									p Выберите тип поддержки
+
+							.large-card__text
+								
+								+calc-radio('radio', '2', 5,'Консультационная')
+								+calc-radio('radio', '2', 6,'Налоговая')
+								+calc-radio('radio', '2', 7,'Кредиты и займы')
+								+calc-radio('radio', '2', 8,'Субсидия')
+								+calc-radio('radio', '2', 9,'Имущественная')
+								+calc-radio('radio', '2', 10,'Образовательная')
+								
+								
+
+
 					
 					p.body-reg В целях координации деятельности органов исполнительной власти Нижегородской области в сфере государственно-частного партнерства и концессии принято постановление Правительства Нижегородской области от 27.10.2016 № 722 «О подготовке и реализации проектов на основе концессионных соглашений и соглашений о государственно-частном партнерстве, а также проведении оценки эффективности проекта муниципально-частного партнерства и определении его сравнительного преимущества».
 		
