--- a/src/pug/sections/_success-history.pug
+++ b/src/pug/sections/_success-history.pug
@@ -16,9 +16,9 @@
 		article.success-history.sticky-menu-section#success-history
 			.container
 				.h2 Истории успеха
-				.brand-cards-wrapper
+				.large-cards-wrapper
 					//====card=====
-					.brand-card
+					.large-card
 						.project-card
 							.project-card__img
 								img(src="./img/brend-logo1.webp", width="245" height="101" alt="logo")
@@ -28,25 +28,25 @@
 									svg.svg-cam
 										use(href="./img/spriteSvg.svg#svg-cam")
 
-						.brand-card__text
+						.large-card__text
 							.title-24 ООО «А.РАЙМОНД РУС»(Франция)
 							p Компания «А.Раймонд РУС» запустила свой завод в Нижегородской области в 2015 году на территории городского округа город Дзержинск. Производство было запущено в кратчайшие сроки при активном содействии региональных властей. 
 							p Основные сферы деятельности предприятия – производство и продажа крепежных изделий и специализированных компонентов из пластмассы преимущественно для автомобильной промышленности России. Сегодня крепежные элементы от Компания «А.Раймонд РУС» используются практически во всех автомобилях отечественной сборки.
 					//====card=====
-					.brand-card
+					.large-card
 						.project-card
 							.project-card__img
 								img(src="./img/brend-logo2.webp", width="245" height="101" alt="logo")
 							.project-card__footer.fly-center
 								p РБПИ ГРУПП (Норвегия)
 
-						.brand-card__text
+						.large-card__text
 							.title-24 РБПИ ГРУПП (Норвегия)
 							p В 2012 году РБПИ Групп основала свиноводческий комплекс ООО «ННПП» в Нижегородской области. В 2016 году компания приступила к реализации второго свиноводческого комплекса ООО «ННПП-2» в Большемурашкинском районе Нижегородской области.
 							p Сегодня РБПИ Групп в Нижегородской области – это 2 свиноводческих комплекса, 1 растениеводческое подразделение и 2 комбикормовых завода. Компания продолжает инвестиционную деятельность в области сельского хозяйства – в 2022 году планируется ввод в эксплуатацию двух свиноводческих комплексов в Сергачском и Ардатовском районах.
 							p РБПИ Групп входит в число крупнейших производителей свинины в России.
 					//====card=====
-					.brand-card
+					.large-card
 						.project-card
 							.project-card__img
 								img(src="./img/brend-logo5.webp", width="245" height="101" alt="logo")
@@ -56,7 +56,7 @@
 									svg.svg-cam
 										use(href="./img/spriteSvg.svg#svg-cam")
 
-						.brand-card__text
+						.large-card__text
 							.title-24 ООО «ХОМА АДГЕЗИВ»(Россия)
 							p Компания «Хома» – российский разработчик и производитель полимерных дисперсий и клеевых систем. На рынке химической отрасли с 1998 года. Сегодня научную деятельность компании осуществляют 2 научных и 6 исследовательских центров, 4 специализированные лаборатории.
 							p Компания активно расширяет производственные мощности. С 2017 года запущен инвестиционный проект по расширению собственного производства в г. Дзержинске Нижегородской области. В 2020 году дочернее предприятие «Хома Адгезив» стало резидентом ОЭЗ «Кулибин», что обеспечило снижение налоговых ставок на прибыль, а также нулевые ставки по налогам на имущество, землю и транспортный налог. Статус «резидента» – это не только новые производственные возможности и инвестирование на выгодных условиях, но и установление кооперационных связей между резидентами ОЭЗ.
