--- a/src/scss/sections/_success-history.scss
+++ b/src/scss/sections/_success-history.scss
@@ -14,10 +14,12 @@
 	}
 }
 
-.brand-card{
+.large-card{
 	display: flex;
 	gap:10px;
+	
 	.project-card{
+		
 		flex-shrink: 0; height: auto;
 		@media (max-width: 1599px) {
 			width: 320px;
@@ -36,8 +38,7 @@
 		background: #FFF;
 		padding: 30px;
 		padding-bottom: 20px;
-	}
-	&__text{
+	flex-grow: 1;
 	padding-left: 20px;
 	padding-right: 20px;
 	background-color: $sec4;
@@ -54,7 +55,7 @@
 	  &>*{width: 100%;}
 	}
 }
-.brand-card +.brand-card{
+.large-card +.large-card{
 	margin-top: 30px;
 	@media (max-width: 991px) {
 		margin-top: 20px;
